Make it look a tad less crappy

--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,28 @@
-/* CSS declarations go here */
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.well {
+  margin: 2em;
+}
+
+form {
+  margin: 2em;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 2em;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.blog-title {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.blog-author {
+  font-weight: bold;
+}
